Kubernetes-core-concepts/01-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: testcontainer
  labels:
    name: testcontainer
spec:
  containers:
  - name: testcontainer
    image: ubuntu
    command: ['sh', '-c', 'echo "Hello bruvio!" && sleep 10']
    # command: ['sh', '-c', 'tail -f /dev/null']
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
  restartPolicy: Never
