Kubernetes-core-concepts/02-alpha-ns.yml
apiVersion: v1
kind: Pod
metadata:
  name: testpod
  labels:
    name: testpod
  namespace: alpha
spec:
  containers:
  - name: testpod
    image: ubuntu
    # command: ['sh', '-c', 'echo "Hello bruvio!" && sleep 10']
    command: ['sh', '-c', 'tail -f /dev/null']
    # resources:
    #   limits:
    #     memory: "128Mi"
    #     cpu: "500m"
  restartPolicy: Never
