Kubernetes-core-concepts/web-3-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-3-deployment
  namespace: cka-practice
  labels: 
    app: web-3
spec:
  type: NodePort
  selector:
    app: web-3
  ports:
    - port: 80
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
